--- a/source/_posts/黄豆焖猪蹄.md
+++ b/source/_posts/黄豆焖猪蹄.md
@@ -10,8 +10,7 @@ description: ' '
 ## 猪蹄焯水
 
 首选🐷后大腿一只
-加姜，料酒
-冷水下锅，水开焯3min
+冷水下锅，加姜，料酒，水开焯3min
 洗干净
 
 ## 炒干
@@ -21,5 +20,5 @@ description: ' '
 
 ## 高压锅40min
 
-转高压锅，加水，2勺盐
+转高压锅，加水，2勺盐1勺糖
 大火，吹气转中火，总大概40min
